tests/bad/call-main.pas
program call_main;

begin
    main
end.
